# Robot_Programming_Turtlebot3

./: README.md
src/marker_comm/: package.xml  setup.cfg  setup.py
src/marker_comm/config/: aruco_alignment_params.yaml
src/marker_comm/launch/: aruco_gazebo.launch.py
src/marker_comm/marker_comm/: aruco_align_controller_node.py  aruco_pose_node.py  calibrate_camera.py  checkerboard_capture_node.py  generate_aruco_markers.py
src/marker_comm/models/aruco_marker_0/: model.config  model.sdf
src/marker_comm/models/aruco_marker_0/materials/scripts/: aruco_marker.material
src/marker_comm/models/aruco_marker_1/: model.config  model.sdf
src/marker_comm/models/aruco_marker_1/materials/scripts/: aruco_marker.material
src/marker_comm/models/turtlebot3_burger_cam_aruco/: model.config  model.sdf
src/marker_comm/worlds/: aruco_alignment.world
src/tb3_delivery_core/: package.xml  setup.cfg  setup.py
src/tb3_delivery_core/config/: mission_params.yaml  nav2_delivery_params.yaml  waypoints.yaml
src/tb3_delivery_core/launch/: delivery.launch.py
src/tb3_delivery_core/tb3_delivery_core/: aruco_process_manager_node.py  delivery_master_node.py  qt_order_node.py
src/tb3_delivery_gui/: package.xml  setup.cfg  setup.py
src/tb3_delivery_gui/tb3_delivery_gui/: delivery_gui_node.py
src/tb3_delivery_interfaces/: CMakeLists.txt  package.xml
src/tb3_delivery_interfaces/action/: ContainerStatus.action
src/tb3_trace_motion/: package.xml  setup.cfg  setup.py
src/tb3_trace_motion/config/: motion_paths.yaml
src/tb3_trace_motion/launch/: trace_motion.launch.py
src/tb3_trace_motion/tb3_trace_motion/: motion_executor_node.py  motion_ui_node.py
src/waypoint_nav/: package.xml  setup.py
src/waypoint_nav/launch/: waypoint_gui.launch.py
src/waypoint_nav/waypoint_nav/: waypoint_gui.py  waypoint_navigator.py  waypoint_saver.py
src/yolo_remote_bringup/: package.xml  setup.py
src/yolo_remote_bringup/launch/: yolo_remote_view.launch.py
src/yolo_v8_ros/: package.xml  setup.cfg  setup.py
src/yolo_v8_ros/yolo_v8_ros/: yolo_node.py
