<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_delivery_core</name>
  <version>0.0.0</version>
  <description>Core TurtleBot3 delivery mission controller using standard ROS 2 interfaces.</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>ament_index_python</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>tb3_trace_motion</exec_depend>
  <exec_depend>tb3_delivery_gui</exec_depend>
  <depend>tb3_delivery_interfaces</depend>
  <exec_depend>marker_comm</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>yolo_v8_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
